<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/department_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|snap"
            app:title="Departments"
            app:titleTextColor="@color/colorPrimaryDark1"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DepartmentActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView22"
            android:layout_width="0dp"
            android:layout_height="273dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/select_programs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:entries="@array/programs_array"
                android:prompt="@string/select_programs" />

            <Spinner
                android:id="@+id/select_schools"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:entries="@array/schools_array"
                android:prompt="@string/select_schools" />


            <Spinner
                android:id="@+id/select_courses"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="190dp"
                android:entries="@array/courses_array"
                android:prompt="@string/select_courses" />

        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView22">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="10dp" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department_details"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/department_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:singleLine="false"
                        android:textColor="#0000ff"
                        android:textSize="18sp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eligibility"
                        android:textAlignment="center"
                        android:id="@+id/eligibility_heading"
                        android:textSize="20sp"
                        android:textColor="#000000"
                        android:layout_below="@id/department_details"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eligibility"
                        android:layout_below="@+id/eligibility_heading"
                        android:layout_margin="16dp"
                        android:singleLine="false"
                        android:textColor="#0000ff"
                        android:textSize="18sp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>